Fix box shadow on mobile nav

--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -138,6 +138,7 @@
                     a:focus {
                         color: $palette-light;
                         background: none;
+                        box-shadow: none;
                     }
                 }
             }
